# yet-another-slightly-cooler-to-do-app-you-migh-not-use-anyway

./: LICENSE  README.md  install.sh  package.json  uninstall.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: input.rs  lib.rs  main.rs  media.rs  tasks.rs
src/components/: DockWidget.tsx  KeystrokeWidget.tsx  MusicWidget.tsx  TaskWidget.tsx
